--- a/mos.yml
+++ b/mos.yml
@@ -10,8 +10,8 @@ includes:
 config_schema:
   - ["rpc.mqtt", "o", {title: "RPC over MQTT settings"}]
   - ["rpc.mqtt.enable", "b", true, {title: "Enable RPC over MQTT"}]
-  - ["rpc.mqtt.pub_topic", "s", "%.*s/rpc", {title: "Topic to post outgoing frames to. Argument to the format string is the frame's destination."}]
-  - ["rpc.mqtt.sub_topic", "s", "%.*s/rpc", {title: "Topic to accept incoming frames on. Argument to the format string is device.id"}]
+  - ["rpc.mqtt.pub_topic", "s", "", {title: "Topic to post outgoing frames to. Argument to the format string is the frame's destination."}]
+  - ["rpc.mqtt.sub_topic", "s", "", {title: "Topic to accept incoming frames on. Argument to the format string is device.id"}]
   - ["rpc.mqtt.sub_wc", "b", true, {title: "Also subscribe to wildcard topic"}]
   - ["rpc.mqtt.qos", "i", 1, {title: "QoS for pub and sub"}]
 
